--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <li><a href="index.html"> Home</a></li>
                 <li><a href="T-shirts & Masks.html">Tshirts/<br>Masks</a></li>
                 <li><a href="Wine Glass & Coffee Mugs.html">Wine Glass/<br>Coffee Mugs</a></li>
-                <li><a href="#">Canvas Bag Designs</a></li>
-                <li><a href="#">Stickers</a></li>
-                <li><a href="#">Contacts/<br>Payments</a></li>
+                <li><a href="Canvas Bag Designs.html">Canvas Bag Designs</a></li>
+                <li><a href="Cornhole Designs & Stickers.html">Cornhole Designs & Stickers</a></li>
+                <li><a href="Contacts & Payments.html">Contacts/<br>Payments</a></li>
             </ul>
         </nav>
     </div>
