--- a/Cornhole-Designs-&-Stickers.html
+++ b/Cornhole-Designs-&-Stickers.html
@@ -11,22 +11,22 @@
     <div class="container">
     
     <div class="sidebar">
-        <img src="Images/essioires by jeri2.PNG" alt="Logo">
+        <img src="Images/essioires-by-jeri2.PNG" alt="Logo">
         <nav>
             <ul>
                 <li><a href="index.html"> Home</a></li>
-                <li><a href="T-shirts & Masks.html">Tshirts/<br>Masks</a></li>
-                <li><a href="Wine Glass & Coffee Mugs.html">Wine Glass/<br>Coffee Mugs</a></li>
-                <li><a href="Canvas Bag Designs.html">Canvas Bag Designs</a></li>
-                <li><a href="Cornhole Designs & Stickers.html">Cornhole Designs & Stickers</a></li>
-                <li><a href="Contacts & Payments.html">Contacts/<br>Payments</a></li>
+                    <li><a href="T-shirts-&-Masks.html">Tshirts/<br>Masks</a></li>
+                    <li><a href="Wine-Glass-&-Coffee-Mugs.html">Wine Glass/<br>Coffee Mugs</a></li>
+                    <li><a href="Canvas-Bag-Designs.html">Canvas Bag Designs</a></li>
+                    <li><a href="Cornhole-Designs-&-Stickers.html">Cornhole Designs & Stickers</a></li>
+                    <li><a href="Contacts-&-Payments.html">Contacts/<br>Payments</a></li>
             </ul>
         </nav>
     </div>
 
     <main>
         <div class="main-content">
-            <img src="Images/essioires by jeri.PNG" alt="Icon">
+            <img src="Images/essioires-by-jeri.PNG" alt="Icon">
             <div class="TM">
                 <h1>Cornhole Designs & Stickers</h1>
                 <ul>
