modified:   Canvas-Bag-Designs.html 	modified:   Contacts-&-Payments.html 	modified:   Cornhole-Designs-&-Stickers.html 	modified:   T-shirts-&-Masks.html 	modified:   Wine-Glass-&-Coffee-Mugs.html 	modified:   index.html

--- a/Canvas-Bag-Designs.html
+++ b/Canvas-Bag-Designs.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Essiries By Jeri Canvas Bag Designs</title>
+<meta name="description" content="Welcome to EssioriesByJeri, where creativity meets functionality! Explore our unique range of hand-designed shirts, cups, bags, and more, each piece crafted with love and care. Let's get ESSIORIZED!">
 <meta charset="utf-8">
 <link rel="stylesheet" href="es.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +27,7 @@
 
     <main>
         <div class="main-content">
-            <img src="Images/essioires-by-jeri.PNG" alt="Icon">
+            <a href="index.html"><img src="Images/essioires-by-jeri.PNG" alt="Icon"></a>
             <div class="TM">
                 <h1>Canvas Bag Designs</h1>
                 <ul>
