--- a/Contacts-&-Payments.html
+++ b/Contacts-&-Payments.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Essiries By Jeri Contacts & Payments</title>
+<meta name="description" content="Welcome to EssioriesByJeri, where creativity meets functionality! Explore our unique range of hand-designed shirts, cups, bags, and more, each piece crafted with love and care. Let's get ESSIORIZED!">
 <meta charset="utf-8">
 <link rel="stylesheet" href="es.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,14 +27,14 @@
 
     <main>
         <div class="main-content">
-            <img src="Images/essioires-by-jeri.PNG" alt="Icon">
+            <a href="index.html"><img src="Images/essioires-by-jeri.PNG" alt="Icon"></a>
             <div class="TM">
             <h1>Contacts & Payments</h1>
 
             <h2>Ways to Contact:</h2>
             <p>
-                Phone: (770) 855 6914 <br>
-                Email: Essioriesbyjeri@gmail.com
+                Phone: <a href="tel:770-856-6914">770-856-6914</a> <br>
+                Email: <a href="mailto:Essioriesbyjeri@gmail.com">EssioriesByJeri</a>
             </p>
 
             <br>
@@ -55,8 +56,8 @@
 
             <h2>Follow our Socials to stay <i>ESSIORIZED</i></h2>
             <ul>
-                <li>Instagram: @essioriesbyjeri</li>
-                <li>Facebook: Essiories by Jeri</li>
+                <li>Instagram: <a href="https://instagram.com/essioriesbyjeri?igshid=YTQwZjQ0NmI0OA==">@essioriesbyjeri</a></li>
+                <li>Facebook: <a href="https://www.facebook.com/essorized?mibextid=LQQJ4d">Essiories by Jeri</a></li>
             </ul>
             </div>
         </div>
