--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Essiries By Jeri Home</title>
+<meta name="description" content="Welcome to EssioriesByJeri, where creativity meets functionality! Explore our unique range of hand-designed shirts, cups, bags, and more, each piece crafted with love and care. Let's get ESSIORIZED!">
 <meta charset="utf-8">
 <link rel="stylesheet" href="es.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +27,7 @@
 
     <main>
         <div class="main-content">
-            <img src="Images/essioires-by-jeri.PNG" alt="Icon">
+            <a href="index.html"><img src="Images/essioires-by-jeri.PNG" alt="Icon"></a>
             <h1>Welcome to Essiories By Jeri</h1>
 
             <h2>Let's get <strong><i>ESSIORIZED</i></strong> today!</h2>
